Version 2.1.2
--------------------------------------------------------------
30 August 2007
+ Control panel will now direct a user to login if their session times
  out during panel view.

22 August 2007
+ changed icon image layout a touch to try and make more space.
+ Updated templates/style.css

Version 2.1.1 - 25 July 2007
--------------------------------------------------------------
2 Aug 2007
+ Panel style - changed overflow:auto to hidden

19 July 2007
+ Put Link.php and Tab.php back in to the inc/init.php. They are
  needed for one of the sessions.
+ Bug #1665174 - Added coding for control panel to try and use the correct master tab
  depending on which module you are using. Thanks Shaun
+ style.css - removed panel width

Version 2.1.0
--------------------------------------------------------------
24 April 2007
+ RFE 1665181 - Can now edit control panel tabs and links.
+ Updated files: templates/link_form.tpl, templates/panelList.tpl,
                 templates/tab_form.tpl

4 April 2007
+ Updated language functions.
+ Added German translation.

13 March 2007
+ Removed border from icons. not xhtml compliant
+ changed style sheet to work under IE7 again

5 March 2007
+ Changed control panel icon

Version 2.0.3
--------------------------------------------------------------
26 February 2007
+ Added style sheet changes recommended from SingleTrack.

Version 2.0.2
--------------------------------------------------------------
21 February 2007
+ Fixed bugs with unregister function.

Version 2.0.1
--------------------------------------------------------------
19 February 2007
+ Moved and reduced translate functions
+ Added some commenting

16 February 2007
+ Added translate functions.
+ Removed object contructor references.